Small corrections to scrollbars

--- a/Windows Longhorn Aero/gtk-3.20/gtk-widgets.css
+++ b/Windows Longhorn Aero/gtk-3.20/gtk-widgets.css
@@ -1759,7 +1759,7 @@ scale highlight:disabled {
  *************/
 scrollbar {
     background-color: transparent;
-    border: 0 none transparent;
+    border: none;
     margin: 0;
     padding: 0;
 }
@@ -1852,6 +1852,7 @@ scrollbar.vertical {
 }
 
 scrollbar.horizontal {
+    border: none;
 	background: linear-gradient(to bottom,
                                 #e9e9e9,
                                 #fcfcfc);
@@ -1863,9 +1864,9 @@ scrollbar slider {
     border-color: #979797;
 	border-radius: 2px;
     min-width: 45px;
-    min-height: 15px;
+    min-height: 12px;
     background-repeat: no-repeat;
-	background-position: center center ;
+	background-position: center center;
     background-clip: padding-box;
     box-shadow: inset 1px 0 #f6f6f6,
                 inset -1px 0 #f6f6f6,
@@ -1874,7 +1875,7 @@ scrollbar slider {
 }
 
 scrollbar.vertical slider {
-    min-width: 15px;
+    min-width: 12px;
     min-height: 45px;
 }
 
@@ -1899,7 +1900,7 @@ scrollbar.vertical slider {
                                  #C0C0C4); 			 
 }
 
-scrollbar .horizontal slider {
+scrollbar.horizontal slider {
      background: url("assets/sh.png") no-repeat center center,
                  linear-gradient(to bottom,
                                  #F4F4F4,
@@ -1912,13 +1913,13 @@ scrollbar.vertical slider:hover {
     background:  url("assets/sv2.png") no-repeat center center,
                  linear-gradient(to right,
                                  #E3F4FC,
-                                 #D6EEFB 4%,
+                                 #D6EEFB 45%,
                                  #A9DBF6 46%,
                                  #A4D5EF 90%,
                                  #9CCAE3);
 }
 
-scrollbar .horizontal slider:hover {
+scrollbar.horizontal slider:hover {
     background:  url("assets/sh2.png") no-repeat center center,
                  linear-gradient(to bottom,
                                  #E3F4FC,
